welcome.lessons.welcome.loopdowhile.Poucet.scala.code
do { 
	for (compteur <- 1 to 5) {
		avance();
		Nbb:Int=0
		if (estSurBiscuit()) {
		Nbb=Nbb+1
		}
	}
	if (Nbb>=3) {
		gauche()
	}
	else if (Nbb<=2) {
		droite()
	}
	

	
} while (!sortieTrouvee)
